# QStorePrice

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  FreshPrice_SDD.md  KAGGLE.md  README.md  __init__.py  app.py  client.py  gradio_training_panel.py  kaggle_qstoreprice.ipynb  models.py  openenv.yaml  pyproject.toml  requirements.txt  requirements_training.txt  validate_submission.py  working_output.ipynb
docs/training_evidence/: cell19_out12.html
eval/: __init__.py  anti_hack_checker.py  baseline.py  evaluator.py  reward_curves.py
eval/baselines/: random_agent.py  rule_based_agent.py
eval/comparison/: baseline_heuristic_measured.json  comparison_summary.json
eval/fixtures/: kaggle_sft_eval_snapshot.json
freshprice_env/: __init__.py  constants.py  entities.py  enums.py  freshprice_env.py  market_state.py  models.py  monitoring.py  openenv_adapter.py  reward.py
freshprice_env/agents/: consumer_agent.py
freshprice_env/brief_pipeline/: __init__.py  parser.py  prompt_builder.py  quality_scorer.py  rule_executor.py  validator.py
freshprice_env/engines/: __init__.py  farmer_engine.py  pricing_engine.py  trend_engine.py
scripts/: check_openenv.py  compare_baseline_trained.py  export_notebook_training_assets.py  generate_comparison_artifacts.py  plot_readme_comparison.py  push_no_whoami.py  run_heuristic_baseline_eval.py
server/: __init__.py  app.py  demo_sim.py
static/: app.js  index.html  styles.css
static/training/: training_snapshot.json
tests/: test_env.py
training/: QStorePrice_Training.ipynb  __init__.py  counterfactual.py  curriculum.py  dpo_trainer.py  generate_sft_data.py  grpo_trainer.py  sft_trainer.py  train.py  trajectory_buffer.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  label.tsx  scroll-area.tsx  separator.tsx  tabs.tsx  textarea.tsx
web/src/lib/: api.ts  productImages.ts
